--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,19 @@
         <artifactId>maven-core</artifactId>
         <version>3.9.6</version>
     </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.1.4</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -33,6 +46,16 @@
                 <target>21</target>
             </configuration>
         </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M8</version>
+                <configuration>
+                    <suiteXmlfiles>
+                        <suiteXMLfile>testng.xml</suiteXMLfile>
+                    </suiteXmlfiles>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
